tests/snapshot/error/source_locations/expression/yield_star/return_result_get_named_property_value_throws.exp
Error: 
   ┌ source_locations/expression/yield_star/return_result_get_named_property_value_throws.js:10:19
   |
10 |             throw new Error();
   |                   ^
Stack trace:
  at get value (source_locations/expression/yield_star/return_result_get_named_property_value_throws.js:10:19)
  at generator (source_locations/expression/yield_star/return_result_get_named_property_value_throws.js:20:3)
  at return (<native>)
  at <global> (source_locations/expression/yield_star/return_result_get_named_property_value_throws.js:25:1)